# six_wheeled_robot

./: CMakeLists.txt  LICENSE  package.xml
launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  gazebo_mdrs.launch
meshes/: base_link.stl  wheel1_1.stl  wheel2_1.stl  wheel3_1.stl  wheel4_1.stl  wheel5_1.stl  wheel6_1.stl
urdf/: materials.xacro  six_wheeled_robot.gazebo  six_wheeled_robot.trans  six_wheeled_robot.xacro
worlds/: MDRS_Small.world
