<?xml version="1.0"?>
<package format="2">
  <name>six_wheeled_robot</name>
  <version>1.0.0</version>
<description>The six_wheeled_robot package</description>

  <maintainer email="bjrice13@gmail.com">Brandon Rice</maintainer>

  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/fusion2urdf</url> -->
  <author email="bjrice13@gmail.com">Brandon Rice</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
